@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2020 the original author or authors.
+ * Copyright 2002-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -21,7 +21,6 @@ import java.lang.reflect.Array;
 import java.lang.reflect.Member;
 import java.lang.reflect.Method;
 import java.util.Collections;
-import java.util.HashMap;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
@@ -70,20 +69,16 @@ import org.springframework.util.ReflectionUtils;
  */
 final class TypeMappedAnnotation<A extends Annotation> extends AbstractMergedAnnotation<A> {
 
-	private static final Map<Class<?>, Object> EMPTY_ARRAYS;
-	static {
-		Map<Class<?>, Object> emptyArrays = new HashMap<>();
-		emptyArrays.put(boolean.class, new boolean[0]);
-		emptyArrays.put(byte.class, new byte[0]);
-		emptyArrays.put(char.class, new char[0]);
-		emptyArrays.put(double.class, new double[0]);
-		emptyArrays.put(float.class, new float[0]);
-		emptyArrays.put(int.class, new int[0]);
-		emptyArrays.put(long.class, new long[0]);
-		emptyArrays.put(short.class, new short[0]);
-		emptyArrays.put(String.class, new String[0]);
-		EMPTY_ARRAYS = Collections.unmodifiableMap(emptyArrays);
-	}
+	private static final Map<Class<?>, Object> EMPTY_ARRAYS = Map.of(
+		boolean.class, new boolean[0],
+		byte.class, new byte[0],
+		char.class, new char[0],
+		double.class, new double[0],
+		float.class, new float[0],
+		int.class, new int[0],
+		long.class, new long[0],
+		short.class, new short[0],
+		String.class, new String[0]);
 
 
 	private final AnnotationTypeMapping mapping;
@@ -302,13 +297,11 @@ final class TypeMappedAnnotation<A extends Annotation> extends AbstractMergedAnn
 	private <T extends Map<String, Object>> Object adaptValueForMapOptions(Method attribute, Object value,
 			Class<?> mapType, Function<MergedAnnotation<?>, T> factory, Adapt[] adaptations) {
 
-		if (value instanceof MergedAnnotation) {
-			MergedAnnotation<?> annotation = (MergedAnnotation<?>) value;
+		if (value instanceof MergedAnnotation<?> annotation) {
 			return (Adapt.ANNOTATION_TO_MAP.isIn(adaptations) ?
 					annotation.asMap(factory, adaptations) : annotation.synthesize());
 		}
-		if (value instanceof MergedAnnotation[]) {
-			MergedAnnotation<?>[] annotations = (MergedAnnotation<?>[]) value;
+		if (value instanceof MergedAnnotation<?>[] annotations) {
 			if (Adapt.ANNOTATION_TO_MAP.isIn(adaptations)) {
 				Object result = Array.newInstance(mapType, annotations.length);
 				for (int i = 0; i < annotations.length; i++) {
@@ -328,18 +321,47 @@ final class TypeMappedAnnotation<A extends Annotation> extends AbstractMergedAnn
 
 	@Override
 	@SuppressWarnings("unchecked")
-	protected A createSynthesized() {
-		if (getType().isInstance(this.rootAttributes) && !isSynthesizable()) {
+	protected A createSynthesizedAnnotation() {
+		// Check root annotation
+		if (isTargetAnnotation(this.rootAttributes) && !isSynthesizable((Annotation) this.rootAttributes)) {
 			return (A) this.rootAttributes;
+		}
+		// Check meta-annotation
+		else if (isTargetAnnotation(this.mapping.getAnnotation()) && !isSynthesizable(this.mapping.getAnnotation())) {
+			return (A) this.mapping.getAnnotation();
 		}
 		return SynthesizedMergedAnnotationInvocationHandler.createProxy(this, getType());
 	}
 
-	private boolean isSynthesizable() {
+	/**
+	 * Determine if the supplied object is an annotation of the required
+	 * {@linkplain #getType() type}.
+	 * @param obj the object to check
+	 * @since 5.3.22
+	 */
+	private boolean isTargetAnnotation(@Nullable Object obj) {
+		return getType().isInstance(obj);
+	}
+
+	/**
+	 * Determine if the supplied annotation has not already been synthesized
+	 * <strong>and</strong> whether the mapped annotation is a composed annotation
+	 * that needs to have its attributes merged or the mapped annotation is
+	 * {@linkplain AnnotationTypeMapping#isSynthesizable() synthesizable} in general.
+	 * @param annotation the annotation to check
+	 * @since 5.3.22
+	 */
+	private boolean isSynthesizable(Annotation annotation) {
 		// Already synthesized?
-		if (this.rootAttributes instanceof SynthesizedAnnotation) {
+		if (AnnotationUtils.isSynthesizedAnnotation(annotation)) {
 			return false;
 		}
+		// Is this a mapped annotation for a composed annotation, and are there
+		// annotation attributes (mirrors) that need to be merged?
+		if (getDistance() > 0 && this.resolvedMirrors.length > 0) {
+			return true;
+		}
+		// Is the mapped annotation itself synthesizable?
 		return this.mapping.isSynthesizable();
 	}
 
@@ -425,34 +447,31 @@ final class TypeMappedAnnotation<A extends Annotation> extends AbstractMergedAnn
 		}
 		value = adaptForAttribute(attribute, value);
 		type = getAdaptType(attribute, type);
-		if (value instanceof Class && type == String.class) {
-			value = ((Class<?>) value).getName();
+		if (value instanceof Class<?> clazz && type == String.class) {
+			value = clazz.getName();
 		}
-		else if (value instanceof String && type == Class.class) {
-			value = ClassUtils.resolveClassName((String) value, getClassLoader());
+		else if (value instanceof String str && type == Class.class) {
+			value = ClassUtils.resolveClassName(str, getClassLoader());
 		}
-		else if (value instanceof Class[] && type == String[].class) {
-			Class<?>[] classes = (Class<?>[]) value;
+		else if (value instanceof Class<?>[] classes && type == String[].class) {
 			String[] names = new String[classes.length];
 			for (int i = 0; i < classes.length; i++) {
 				names[i] = classes[i].getName();
 			}
 			value = names;
 		}
-		else if (value instanceof String[] && type == Class[].class) {
-			String[] names = (String[]) value;
+		else if (value instanceof String[] names && type == Class[].class) {
 			Class<?>[] classes = new Class<?>[names.length];
 			for (int i = 0; i < names.length; i++) {
 				classes[i] = ClassUtils.resolveClassName(names[i], getClassLoader());
 			}
 			value = classes;
 		}
-		else if (value instanceof MergedAnnotation && type.isAnnotation()) {
-			MergedAnnotation<?> annotation = (MergedAnnotation<?>) value;
+		else if (value instanceof MergedAnnotation<?> annotation && type.isAnnotation()) {
 			value = annotation.synthesize();
 		}
-		else if (value instanceof MergedAnnotation[] && type.isArray() && type.getComponentType().isAnnotation()) {
-			MergedAnnotation<?>[] annotations = (MergedAnnotation<?>[]) value;
+		else if (value instanceof MergedAnnotation<?>[] annotations &&
+				type.isArray() && type.getComponentType().isAnnotation()) {
 			Object array = Array.newInstance(type.getComponentType(), annotations.length);
 			for (int i = 0; i < annotations.length; i++) {
 				Array.set(array, i, annotations[i].synthesize());
@@ -504,7 +523,7 @@ final class TypeMappedAnnotation<A extends Annotation> extends AbstractMergedAnn
 	}
 
 	private boolean isEmptyObjectArray(Object value) {
-		return (value instanceof Object[] && ((Object[]) value).length == 0);
+		return (value instanceof Object[] objects && objects.length == 0);
 	}
 
 	private Object emptyArray(Class<?> componentType) {
@@ -516,8 +535,8 @@ final class TypeMappedAnnotation<A extends Annotation> extends AbstractMergedAnn
 	}
 
 	private MergedAnnotation<?> adaptToMergedAnnotation(Object value, Class<? extends Annotation> annotationType) {
-		if (value instanceof MergedAnnotation) {
-			return (MergedAnnotation<?>) value;
+		if (value instanceof MergedAnnotation<?> mergedAnnotation) {
+			return mergedAnnotation;
 		}
 		AnnotationTypeMapping mapping = AnnotationTypeMappings.forAnnotationType(annotationType).get(0);
 		return new TypeMappedAnnotation<>(
@@ -572,11 +591,11 @@ final class TypeMappedAnnotation<A extends Annotation> extends AbstractMergedAnn
 			return this.classLoader;
 		}
 		if (this.source != null) {
-			if (this.source instanceof Class) {
-				return ((Class<?>) source).getClassLoader();
+			if (this.source instanceof Class<?> clazz) {
+				return clazz.getClassLoader();
 			}
-			if (this.source instanceof Member) {
-				((Member) this.source).getDeclaringClass().getClassLoader();
+			if (this.source instanceof Member member) {
+				member.getDeclaringClass().getClassLoader();
 			}
 		}
 		return null;
@@ -603,8 +622,7 @@ final class TypeMappedAnnotation<A extends Annotation> extends AbstractMergedAnn
 	static <A extends Annotation> TypeMappedAnnotation<A> createIfPossible(
 			AnnotationTypeMapping mapping, MergedAnnotation<?> annotation, IntrospectionFailureLogger logger) {
 
-		if (annotation instanceof TypeMappedAnnotation) {
-			TypeMappedAnnotation<?> typeMappedAnnotation = (TypeMappedAnnotation<?>) annotation;
+		if (annotation instanceof TypeMappedAnnotation<?> typeMappedAnnotation) {
 			return createIfPossible(mapping, typeMappedAnnotation.source,
 					typeMappedAnnotation.rootAttributes,
 					typeMappedAnnotation.valueExtractor,
